--- a/src/app/section/section-new/section-new.component.html
+++ b/src/app/section/section-new/section-new.component.html
@@ -23,7 +23,7 @@
           <label>Nombre:</label>
         </div>
         <div class="col-md-5 col-lg-5 col-sm-5 pl-0">
-          <input mdbActive formControlName="name" type="text" class="form-control"
+          <input mdbActive formControlName="name" type="text" class="form-control customInput"
             [class.is-invalid]="sectionForm.get('name').invalid && (sectionForm.get('name').dirty || sectionForm.get('name').touched)"
             id="name">
         </div>
