--- a/src/app/user-roles/user-roles-edit/user-roles-edit.component.html
+++ b/src/app/user-roles/user-roles-edit/user-roles-edit.component.html
@@ -23,7 +23,7 @@
           <label>{{ 'UserRoles.roleName' | translate }}:</label>
         </div>
         <div class="col-md-5 col-lg-5 col-sm-5 pl-0">
-          <input formControlName="name" type="text" class="form-control"
+          <input formControlName="name" type="text" class="form-control customInput"
             [class.is-invalid]="userRoleForm.get('name').invalid && (userRoleForm.get('name').dirty || userRoleForm.get('name').touched)"
             id="name">
         </div>
