--- a/src/app/user/user-edit/user-edit.component.html
+++ b/src/app/user/user-edit/user-edit.component.html
@@ -24,7 +24,7 @@
           <label>{{ 'Users.name' | translate }}:</label>
         </div>
         <div class="col-md-5 col-lg-5 col-sm-5 pl-0">
-          <input mdbActive formControlName="name" type="text" class="form-control"
+          <input mdbActive formControlName="name" type="text" class="form-control customInput"
             [class.is-invalid]="userForm.get('name').invalid && (userForm.get('name').dirty || userForm.get('name').touched)"
             id="name">
         </div>
@@ -41,7 +41,7 @@
           <label>{{ 'Users.lastName' | translate }}:</label>
         </div>
         <div class="col-md-5 col-lg-5 col-sm-5 pl-0">
-          <input mdbActive formControlName="lastname" type="text" class="form-control"
+          <input mdbActive formControlName="lastname" type="text" class="form-control customInput"
             [class.is-invalid]="userForm.get('lastname').invalid && (userForm.get('lastname').dirty || userForm.get('lastname').touched)"
             id="lastname">
         </div>
@@ -59,7 +59,7 @@
           <label>{{ 'Users.userName' | translate }}:</label>
         </div>
         <div class="col-md-5 col-lg-5 col-sm-5 pl-0">
-          <input mdbActive formControlName="username" type="text" class="form-control"
+          <input mdbActive formControlName="username" type="text" class="form-control customInput"
             [class.is-invalid]="userForm.get('username').invalid && (userForm.get('username').dirty || userForm.get('username').touched)"
             id="username">
         </div>
@@ -82,7 +82,7 @@
           <mdb-select #roleId formControlName="roleId" (selected)="selectUserRole(roleId.value)"
             [options]="userRolesSelect" placeholder="Choose your option"
             [class.is-invalid]="userForm.get('roleId').invalid && (userForm.get('roleId').dirty || userForm.get('roleId').touched)"
-            id="roleId"></mdb-select>
+            id="roleId" class="customInput"></mdb-select>
         </div>
       </div>
       <div *ngIf="userForm.get('roleId').invalid && (userForm.get('roleId').dirty || userForm.get('roleId').touched)"
