--- a/src/app/cash-register/cash-register-new/cash-register-new.component.html
+++ b/src/app/cash-register/cash-register-new/cash-register-new.component.html
@@ -23,7 +23,7 @@
           <label>Nombre:</label>
         </div>
         <div class="col-md-5 col-lg-5 col-sm-5 pl-0">
-          <input formControlName="name" type="text" class="form-control" [class.is-invalid]="cashRegisterForm.get('name').invalid && (cashRegisterForm.get('name').dirty || cashRegisterForm.get('name').touched)"
+          <input formControlName="name" type="text" class="form-control customInput" [class.is-invalid]="cashRegisterForm.get('name').invalid && (cashRegisterForm.get('name').dirty || cashRegisterForm.get('name').touched)"
             id="name">
         </div>
       </div>
