--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,15 +1,26 @@
+
+
+<div align="center">
+<img src="assets/img/logo-blanco.png" width="180px" height="auto">
+<h5>
+    Bienvenido! Introduce tu usuario y contraseña para iniciar sesión
+</h5>
+<br>
+</div>
+
+<div class="login-background">
 <h2>Login</h2>
 <form [formGroup]="loginForm" (ngSubmit)="onSubmit()">
     <div class="form-group">
         <label for="username">Usuario</label>
-        <input type="text" formControlName="username" class="form-control" [ngClass]="{ 'is-invalid': submitted && f.username.errors }" />
+        <input type="text" formControlName="username" class="form-control customInput" [ngClass]="{ 'is-invalid': submitted && f.username.errors }" />
         <div *ngIf="submitted && f.username.errors" class="invalid-feedback">
             <div *ngIf="f.username.errors.required">El nombre de usuario es requerido</div>
         </div>
     </div>
     <div class="form-group">
         <label for="password">Contraseña</label>
-        <input type="password" formControlName="password" class="form-control" [ngClass]="{ 'is-invalid': submitted && f.password.errors }" />
+        <input type="password" formControlName="password" class="form-control customInput" [ngClass]="{ 'is-invalid': submitted && f.password.errors }" />
         <div *ngIf="submitted && f.password.errors" class="invalid-feedback">
             <div *ngIf="f.password.errors.required">La contraseña es requerida</div>
         </div>
@@ -20,3 +31,4 @@
     </div>
     <div *ngIf="error" class="alert alert-danger">{{error}}</div>
 </form>
+</div>
