--- a/src/app/payment-type/payment-type-new/payment-type-new.component.html
+++ b/src/app/payment-type/payment-type-new/payment-type-new.component.html
@@ -22,7 +22,7 @@
           <label>Nombre:</label>
         </div>
         <div class="col-md-5 col-lg-5 col-sm-5 pl-0">
-          <input mdbActive formControlName="name" type="text" class="form-control"
+          <input mdbActive formControlName="name" type="text" class="form-control customInput"
             [class.is-invalid]="paymentTypeForm.get('name').invalid && (paymentTypeForm.get('name').dirty || paymentTypeForm.get('name').touched)"
             id="name">
         </div>
