--- a/src/app/size/size-edit/size-edit.component.html
+++ b/src/app/size/size-edit/size-edit.component.html
@@ -23,7 +23,7 @@
           <label>Nombre:</label>
         </div>
         <div class="col-md-5 col-lg-5 col-sm-5 pl-0">
-          <input formControlName="name" type="text" class="form-control"
+          <input formControlName="name" type="text" class="form-control customInput"
             [class.is-invalid]="sizeForm.get('name').invalid && (sizeForm.get('name').dirty || sizeForm.get('name').touched)"
             id="name">
         </div>
