--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,4 +1,4 @@
-
+<div class="fondo-rojo">
 
 <div align="center">
 <img src="assets/img/logo-blanco.png" width="180px" height="auto">
@@ -32,3 +32,14 @@
     <div *ngIf="error" class="alert alert-danger">{{error}}</div>
 </form>
 </div>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+</div>
+<footer>
+    Copyright - 2020
+</footer>
