--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -16,11 +16,11 @@
 			</ul>
 			
 			<ul class="navbar-nav nav-flex-icons">
-				<li class="pt-0 pr-2 text-center" mdbRippleRadius>
+				<li class="pt-0 pr-2 text-center customLiDate" mdbRippleRadius>
 					<p class="mb-0 customDate">{{ myDate | date:'EEEE'}}</p>
 					<p class="mb-0 customDate">{{ myDate | date:'MMMM d'}}</p>
 				</li>
-				<li class="pt-2">
+				<li class="pt-2 customLiDate">
 					<h5 class="mb-0">{{ myDate | date:'HH:mm:ss'}}</h5>
 				</li>
 				<li class="nav-item dropdown btn-group pr-2" dropdown>
