--- a/src/styles.scss
+++ b/src/styles.scss
@@ -43,7 +43,6 @@ background-color:#bd290c !important;
 }
 
 .customLi{
-    width: 3.5rem;
     text-align: center;
 }
 
@@ -365,9 +364,9 @@ width: 100%!important;
 }
 
 .customButtonCancel{
-    color:rgb(228, 48, 18)!important;
-    border: solid 1px rgb(228, 48, 18);
-	border-radius:20px;
+    color:#e43012!important;
+    border: solid 2px #e43012!important;
+	border-radius:20px!important;
 }
 
 .mdbSelectClass{
@@ -380,7 +379,7 @@ width: 100%!important;
 
 .outletGeneric{
     border-left: solid 1px lightgrey;
-    background-color: #f6f6f6;
+    background-color: #fff0db;
 }
 
 .outletTitle{
@@ -392,7 +391,7 @@ width: 100%!important;
 }
 
 .customFooterModal {
-    background-color: #eeeeee;
+    background-color:transparent;
 }
 
 .customFooterButtons {
@@ -484,6 +483,8 @@ body{
 .modal-content{
 background-color: #fff0db;
 color:#424242;
+border-radius:30px;
+border:2px solid #fff0db;
 }
 
 .modal-footer button{
@@ -496,16 +497,21 @@ padding:5px;
 .modal-header{
 background-color:#e43012;
 color:white;
+border-radius:30px;
+border:solid 2px #e43012;
 }
 
 @media (max-width: 992px) {
-nav ul li{
-width:10%;
-background-color:#e43012;
-}
-nav ul{
-    width:100%;
-    background-color:#e43012;
+    nav ul li{
+        width:10%;
+        background-color:#e43012;
+    }
+    nav ul{
+        width:100%;
+        background-color:#e43012;
+    }
+    .customLiDate{
+        display:none;
     }
 }
 
