--- a/src/styles.scss
+++ b/src/styles.scss
@@ -205,6 +205,18 @@ table {
   text-align: right!important;
 }
 
+.customInputNumber {  
+  height: .8rem!important;
+  text-align: right!important;
+}
+
+.customInputTelNumber {
+  margin: 0px!important;
+  height: .8rem!important;
+  width: 8rem!important;
+  text-align: right!important;
+}
+
 .customInputHeight {  
   height: 1rem!important;  
 }
