--- a/src/app/cash-register/cash-register-new/cash-register-new.component.html
+++ b/src/app/cash-register/cash-register-new/cash-register-new.component.html
@@ -19,15 +19,17 @@
   <form class="pt-4 pr-3 pl-3" method="post" novalidate [formGroup]="cashRegisterForm">
     <div class="col-md-12 col-lg-12 col-sm-12 md-form form-sm">
       <div class="row pl-2">
-        <div class="col-md-4 col-lg-4 col-sm-4 pr-0">
+        <div class="col-md-3 col-lg-3 col-sm-3 pr-0">
           <label>Nombre:</label>
         </div>
         <div class="col-md-5 col-lg-5 col-sm-5 pl-0">
-          <input formControlName="name" type="text" class="form-control customInput" [class.is-invalid]="cashRegisterForm.get('name').invalid && (cashRegisterForm.get('name').dirty || cashRegisterForm.get('name').touched)"
+          <input formControlName="name" type="text" class="form-control customInput customInputHeight"
+            [class.is-invalid]="cashRegisterForm.get('name').invalid && (cashRegisterForm.get('name').dirty || cashRegisterForm.get('name').touched)"
             id="name">
         </div>
       </div>
-      <div *ngIf="cashRegisterForm.get('name').invalid && (cashRegisterForm.get('name').dirty || cashRegisterForm.get('name').touched)"
+      <div
+        *ngIf="cashRegisterForm.get('name').invalid && (cashRegisterForm.get('name').dirty || cashRegisterForm.get('name').touched)"
         class="alert alert-danger">
         El nombre de la Caja es requerido.
       </div>
@@ -35,14 +37,17 @@
 
     <div class="col-md-12 col-lg-12 col-sm-12 md-form form-sm pt-3 pb-3 pr-3 pl-3">
       <div class="row pl-2">
-        <mdb-checkbox [class.checkbox-primary-custom]="true"  formControlName="available">{{ checkboxAvailableText }}</mdb-checkbox>
+        <mdb-checkbox [class.checkbox-primary-custom]="true" formControlName="available">{{ checkboxAvailableText }}
+        </mdb-checkbox>
       </div>
     </div>
   </form>
 </div>
 <div class="col-12">
   <div class="col-7 offset-5">
-    <button type="button" mdbBtn role="button" rounded="true" size="sm" mdbWavesEffect [class.customButtonCancel]="true" (click)="showModalCancel(cancelTemplate)">{{cancelButton}}</button>
-    <button type="button" mdbBtn role="button" rounded="true" size="sm" mdbWavesEffect [class.btn-primary-custom]="true" [disabled]="cashRegisterForm.invalid" (click)="saveCashRegister()">{{saveButton}}</button>
+    <button type="button" mdbBtn role="button" rounded="true" size="sm" mdbWavesEffect [class.customButtonCancel]="true"
+      (click)="showModalCancel(cancelTemplate)">{{cancelButton}}</button>
+    <button type="button" mdbBtn role="button" rounded="true" size="sm" mdbWavesEffect [class.btn-primary-custom]="true"
+      [disabled]="cashRegisterForm.invalid" (click)="saveCashRegister()">{{saveButton}}</button>
   </div>
 </div>
