--- a/src/app/client/client-new/client-new.component.html
+++ b/src/app/client/client-new/client-new.component.html
@@ -39,7 +39,7 @@
           <label>Teléfono:</label>
         </div>
         <div class="col-md-4 col-lg-4 col-sm-4 pl-0">
-          <input #clientTel="ngModel" type="text" class="form-control customInput customInputHeight"
+          <input #clientTel="ngModel" type="number" class="form-control customInput customInputTelNumber"
             [class.is-invalid]="clientTel.invalid && (clientTel.dirty || clientTel.touched)" name="clientTel"
             id="clientTel" [(ngModel)]="newClient.tel">
         </div>
@@ -57,7 +57,7 @@
             placeholder="Calle">
         </div>
         <div class="col-md-2 col-lg-2 col-sm-2 ml-2">
-          <input #clientAddressNumber="ngModel" type="text" class="form-control customInput customInputHeight"
+          <input #clientAddressNumber="ngModel" type="number" class="form-control customInput customInputNumberAmount customInputHeight"
             name="clientAddressNumber" id="clientAddressNumber" [(ngModel)]="newClient.addressNumber"
             placeholder="Número">
         </div>
