--- a/src/app/login/login.component.scss
+++ b/src/app/login/login.component.scss
@@ -1,64 +1,82 @@
 footer{
-text-align: center;
-color:#fff;
-background-color: #a32610;
-position:absolute;
-bottom:0px;
-right:0px;
-left:0px;
-height:40px;
-width:100%;
-}
-
-form{
-width:90%;
-margin:0px auto;
-margin-top:40px;
+  text-align: center;
+  color:#fff;
+  background-color: #a32610;
+  position:absolute;
+  bottom:0px;
+  right:0px;
+  left:0px;
+  height:40px;
+  width:100%;
 }
 
 .fondo-rojo{
-background-color:#e43012;
+  background-color:#e43012;
+  height: 100vh;
 }
 
 h2{
-color:#e43012;
-text-align:center;
-margin-top:40px;
-text-decoration: underline;
+  color:#e43012;
+  text-align:center;
+  margin-top:40px;
+  text-decoration: underline;
 }
 
 h5{
-color:#ffffff;
-font-size:15px;
+  color:#ffffff;
+  font-size:15px;
 }
 
 img{
-margin-top: 80px;
+  margin-top: 80px;
 }
 
 .login-background{
-background-color: #fff0db;
-width:40%;
-padding:10px;
-border-radius:30px;
-border:2px solid #fff0db;
-margin:0px auto;
-box-shadow: 5px 3px 5px #a32610;
+  background-color: #fff0db;
+  width:20%;
+  padding:10px;
+  border-radius:30px;
+  border:2px solid #fff0db;
+  margin:0px auto;
+  box-shadow: 5px 3px 5px #a32610;
 }
 
+@media (max-width: 1300px) {
+  .login-background{
+    width:35%;
+    padding:10px;
+    border-radius:30px;
+    border:2px solid #e43012;
+    margin:0px auto;
+  }
+}
 
 @media (max-width: 992px) {
-    form{
-        width:90%;
-        margin:0px auto;
-        }
+  .login-background{
+    width:45%;
+    padding:10px;
+    border-radius:30px;
+    border:2px solid #e43012;
+    margin:0px auto;
+  }
+}
 
-        .login-background{
-            background-color: #e43012;
-            width:100%;
-            padding:10px;
-            border-radius:30px;
-            border:2px solid #e43012;
-            margin:0px auto;
-            }
+@media (max-width: 750px) {
+  .login-background{
+    width:55%;
+    padding:10px;
+    border-radius:30px;
+    border:2px solid #e43012;
+    margin:0px auto;
+  }
+}
+
+@media (max-width: 575px) {
+  .login-background{
+    width:75%;
+    padding:10px;
+    border-radius:30px;
+    border:2px solid #e43012;
+    margin:0px auto;
+  }
 }
