--- a/src/app/payment-type/payment-type-new/payment-type-new.component.html
+++ b/src/app/payment-type/payment-type-new/payment-type-new.component.html
@@ -18,11 +18,11 @@
   <form class="pt-4 pr-3 pl-3" method="post" novalidate [formGroup]="paymentTypeForm">
     <div class="col-md-12 col-lg-12 col-sm-12 md-form form-sm">
       <div class="row pl-2">
-        <div class="col-md-4 col-lg-4 col-sm-4 pr-0">
+        <div class="col-md-3 col-lg-3 col-sm-3 pr-0">
           <label>Nombre:</label>
         </div>
         <div class="col-md-5 col-lg-5 col-sm-5 pl-0">
-          <input mdbActive formControlName="name" type="text" class="form-control customInput"
+          <input mdbActive formControlName="name" type="text" class="form-control customInput customInputHeight"
             [class.is-invalid]="paymentTypeForm.get('name').invalid && (paymentTypeForm.get('name').dirty || paymentTypeForm.get('name').touched)"
             id="name">
         </div>
@@ -37,7 +37,8 @@
     <div class="col-md-12 col-lg-12 col-sm-12 md-form form-sm">
       <div class="row pl-2">
         <div class="col-md-5 col-lg-5 col-sm-5 pl-0">
-          <mdb-checkbox [class.checkbox-primary-custom]="true"  formControlName="available"> {{ checkboxAvailableText }}</mdb-checkbox>
+          <mdb-checkbox [class.checkbox-primary-custom]="true" formControlName="available"> {{ checkboxAvailableText }}
+          </mdb-checkbox>
         </div>
       </div>
     </div>
@@ -47,7 +48,7 @@
   <div class="col-7 offset-5">
     <button type="button" mdbBtn role="button" rounded="true" size="sm" mdbWavesEffect [class.customButtonCancel]="true"
       (click)="showModalCancel(cancelTemplate)">{{cancelButton}}</button>
-    <button type="button" mdbBtn role="button" rounded="true" size="sm" mdbWavesEffect [class.btn-primary-custom]="true" [disabled]="paymentTypeForm.invalid"
-      (click)="savePaymentType()">{{saveButton}}</button>
+    <button type="button" mdbBtn role="button" rounded="true" size="sm" mdbWavesEffect [class.btn-primary-custom]="true"
+      [disabled]="paymentTypeForm.invalid" (click)="savePaymentType()">{{saveButton}}</button>
   </div>
 </div>
