--- a/src/app/size/size-edit/size-edit.component.html
+++ b/src/app/size/size-edit/size-edit.component.html
@@ -19,11 +19,11 @@
   <form method="post" novalidate [formGroup]="sizeForm">
     <div class="col-md-12 col-lg-12 col-sm-12 md-form form-sm pt-3 pb-3 pr-3 pl-3">
       <div class="row pl-2">
-        <div class="col-md-4 col-lg-4 col-sm-4 pr-0">
+        <div class="col-md-3 col-lg-3 col-sm-3 pr-0">
           <label>Nombre:</label>
         </div>
         <div class="col-md-5 col-lg-5 col-sm-5 pl-0">
-          <input formControlName="name" type="text" class="form-control customInput"
+          <input formControlName="name" type="text" class="form-control customInput customInputHeight"
             [class.is-invalid]="sizeForm.get('name').invalid && (sizeForm.get('name').dirty || sizeForm.get('name').touched)"
             id="name">
         </div>
@@ -36,7 +36,8 @@
 
     <div class="col-md-12 col-lg-12 col-sm-12 md-form form-sm pt-3 pb-3 pr-3 pl-3">
       <div class="row pl-2">
-        <mdb-checkbox [class.checkbox-primary-custom]="true"  formControlName="available"> {{ checkboxAvailableText }}</mdb-checkbox>
+        <mdb-checkbox [class.checkbox-primary-custom]="true" formControlName="available"> {{ checkboxAvailableText }}
+        </mdb-checkbox>
       </div>
     </div>
   </form>
@@ -45,7 +46,7 @@
   <div class="col-7 offset-5">
     <button type="button" mdbBtn role="button" rounded="true" size="sm" mdbWavesEffect [class.customButtonCancel]="true"
       (click)="showModalCancel(cancelTemplate)">{{cancelButton}}</button>
-    <button type="button" mdbBtn role="button" rounded="true" size="sm" mdbWavesEffect [class.btn-primary-custom]="true" [disabled]="sizeForm.invalid"
-      (click)="updateSize()">{{saveButton}}</button>
+    <button type="button" mdbBtn role="button" rounded="true" size="sm" mdbWavesEffect [class.btn-primary-custom]="true"
+      [disabled]="sizeForm.invalid" (click)="updateSize()">{{saveButton}}</button>
   </div>
 </div>
