--- a/src/app/size/size-new/size-new.component.html
+++ b/src/app/size/size-new/size-new.component.html
@@ -18,11 +18,11 @@
   <form class="pt-4 pr-3 pl-3" method="post" novalidate [formGroup]="sizeForm">
     <div class="col-md-12 col-lg-12 col-sm-12 md-form form-sm">
       <div class="row pl-2">
-        <div class="col-md-4 col-lg-4 col-sm-4 pr-0">
+        <div class="col-md-3 col-lg-3 col-sm-3 pr-0">
           <label>Nombre:</label>
         </div>
         <div class="col-md-5 col-lg-5 col-sm-5 pl-0">
-          <input mdbActive formControlName="name" type="text" class="form-control customInput"
+          <input mdbActive formControlName="name" type="text" class="form-control customInput customInputHeight"
             [class.is-invalid]="sizeForm.get('name').invalid && (sizeForm.get('name').dirty || sizeForm.get('name').touched)"
             id="name">
         </div>
