--- a/src/app/user-roles/user-roles-new/user-roles-new.component.html
+++ b/src/app/user-roles/user-roles-new/user-roles-new.component.html
@@ -19,15 +19,17 @@
   <form class="pt-4 pr-3 pl-3" method="post" novalidate [formGroup]="userRoleForm">
     <div class="col-md-12 col-lg-12 col-sm-12 md-form form-sm">
       <div class="row pl-2">
-        <div class="col-md-4 col-lg-4 col-sm-4 pr-0">
+        <div class="col-md-3 col-lg-3 col-sm-3 pr-0">
           <label>{{ 'UserRoles.roleName' | translate }}:</label>
         </div>
         <div class="col-md-5 col-lg-5 col-sm-5 pl-0">
-          <input formControlName="name" type="text" class="form-control customInput" [class.is-invalid]="userRoleForm.get('name').invalid && (userRoleForm.get('name').dirty || userRoleForm.get('name').touched)"
+          <input formControlName="name" type="text" class="form-control customInput customInputHeight"
+            [class.is-invalid]="userRoleForm.get('name').invalid && (userRoleForm.get('name').dirty || userRoleForm.get('name').touched)"
             id="name">
         </div>
       </div>
-      <div *ngIf="userRoleForm.get('name').invalid && (userRoleForm.get('name').dirty || userRoleForm.get('name').touched)"
+      <div
+        *ngIf="userRoleForm.get('name').invalid && (userRoleForm.get('name').dirty || userRoleForm.get('name').touched)"
         class="alert alert-danger">
         {{ 'UserRoles.errorRequiredName' | translate }}
       </div>
@@ -35,14 +37,17 @@
 
     <div class="col-md-12 col-lg-12 col-sm-12 md-form form-sm pt-3 pb-3 pr-3 pl-3">
       <div class="row pl-2">
-        <mdb-checkbox [class.checkbox-primary-custom]="true"  formControlName="isWaiter">{{ 'UserRoles.isWaiter' | translate }}</mdb-checkbox>
+        <mdb-checkbox [class.checkbox-primary-custom]="true" formControlName="isWaiter">
+          {{ 'UserRoles.isWaiter' | translate }}</mdb-checkbox>
       </div>
     </div>
   </form>
 </div>
 <div class="col-12">
   <div class="col-7 offset-5">
-    <button type="button" mdbBtn role="button" rounded="true" size="sm" mdbWavesEffect [class.customButtonCancel]="true" (click)="showModalCancel(cancelTemplate)">{{ 'Commons.Buttons.cancel' | translate }}</button>
-    <button type="button" mdbBtn role="button" rounded="true" size="sm" mdbWavesEffect [class.btn-primary-custom]="true" [disabled]="userRoleForm.invalid" (click)="saveUserRole()">{{ 'Commons.Buttons.save' | translate }}</button>
+    <button type="button" mdbBtn role="button" rounded="true" size="sm" mdbWavesEffect [class.customButtonCancel]="true"
+      (click)="showModalCancel(cancelTemplate)">{{ 'Commons.Buttons.cancel' | translate }}</button>
+    <button type="button" mdbBtn role="button" rounded="true" size="sm" mdbWavesEffect [class.btn-primary-custom]="true"
+      [disabled]="userRoleForm.invalid" (click)="saveUserRole()">{{ 'Commons.Buttons.save' | translate }}</button>
   </div>
 </div>
