--- a/src/app/user/user-new/user-new.component.html
+++ b/src/app/user/user-new/user-new.component.html
@@ -9,10 +9,10 @@
   </app-error-template>
 </ng-template>
 <!-- Form -->
-<div class="col-12 pl-0 pr-0 formNewEditSettings">
+<div class="col-12 pl-0 pr-0" style="height: 72vh;">
   <div class="col-12 pr-0 outletTitle">
     <h5>
-      {{ 'Users.editPageTitle' | translate }}
+      {{ 'Users.newUserPageTitle' | translate }}
     </h5>
   </div>
   <form class="pt-4 pr-3 pl-3" method="post" novalidate [formGroup]="userForm">
@@ -22,7 +22,7 @@
           <label>{{ 'Users.name' | translate }}:</label>
         </div>
         <div class="col-md-5 col-lg-5 col-sm-5 pl-0">
-          <input mdbActive formControlName="name" type="text" class="form-control customInput"
+          <input mdbActive formControlName="name" type="text" class="form-control customInput customInputHeight"
             [class.is-invalid]="userForm.get('name').invalid && (userForm.get('name').dirty || userForm.get('name').touched)"
             id="name">
         </div>
@@ -39,7 +39,7 @@
           <label>{{ 'Users.lastName' | translate }}:</label>
         </div>
         <div class="col-md-5 col-lg-5 col-sm-5 pl-0">
-          <input mdbActive formControlName="lastname" type="text" class="form-control customInput"
+          <input mdbActive formControlName="lastname" type="text" class="form-control customInput customInputHeight"
             [class.is-invalid]="userForm.get('lastname').invalid && (userForm.get('lastname').dirty || userForm.get('lastname').touched)"
             id="lastname">
         </div>
@@ -57,7 +57,7 @@
           <label>{{ 'Users.userName' | translate }}:</label>
         </div>
         <div class="col-md-5 col-lg-5 col-sm-5 pl-0">
-          <input mdbActive formControlName="username" type="text" class="form-control customInput"
+          <input mdbActive formControlName="username" type="text" class="form-control customInput customInputHeight"
             [class.is-invalid]="userForm.get('username').invalid && (userForm.get('username').dirty || userForm.get('username').touched)"
             id="username">
         </div>
@@ -75,7 +75,7 @@
           <label>{{ 'Users.password' | translate }}:</label>
         </div>
         <div class="col-md-5 col-lg-5 col-sm-5 pl-0">
-          <input mdbActive formControlName="password" type="password" class="form-control customInput"
+          <input mdbActive formControlName="password" type="password" class="form-control customInput customInputHeight"
             [class.is-invalid]="userForm.get('password').invalid && (userForm.get('password').dirty || userForm.get('password').touched)"
             id="password">
         </div>
@@ -93,7 +93,7 @@
           <label>{{ 'Users.confirmPassword' | translate }}:</label>
         </div>
         <div class="col-md-5 col-lg-5 col-sm-5 pl-0">
-          <input mdbActive formControlName="passwordConfirm" type="password" class="form-control customInput"
+          <input mdbActive formControlName="passwordConfirm" type="password" class="form-control customInput customInputHeight"
             [class.is-invalid]="userForm.get('passwordConfirm').invalid && (userForm.get('passwordConfirm').dirty || userForm.get('passwordConfirm').touched)"
             id="passwordConfirm">
         </div>
@@ -112,11 +112,11 @@
         <div class="col-md-4 col-lg-4 col-sm-4 pr-0">
           <label>{{ 'Users.userRole' | translate }}:</label>
         </div>
-        <div class="col-md-5 col-lg-5 col-sm-5 pl-0">
+        <div class="col-md-5 col-lg-5 col-sm-5 pl-0 ">
           <mdb-select #roleId formControlName="roleId" (selected)="selectUserRole(roleId.value)"
             [options]="userRolesSelect" placeholder="Choose your option"
             [class.is-invalid]="userForm.get('roleId').invalid && (userForm.get('roleId').dirty || userForm.get('roleId').touched)"
-            id="roleId" class="customInput"></mdb-select>
+            id="roleId"></mdb-select>
         </div>
       </div>
       <div *ngIf="userForm.get('roleId').invalid && (userForm.get('roleId').dirty || userForm.get('roleId').touched)"
