--- a/src/app/order/order-new/order-new.component.html
+++ b/src/app/order/order-new/order-new.component.html
@@ -208,14 +208,14 @@ overflow: auto; overflow-x: hidden;">
       <div class="row col-lg-8 col-md-8 col-sm-8 customSubtittle">
         {{ order.created_at | date:'dd/MM/yy HH:mm' }}
       </div>
-      <div *ngIf="true === false" class="d-flex justify-content-end row col-lg-4 col-md-4 col-sm-4 pr-0">
+      <!-- <div class="d-flex justify-content-end row col-lg-4 col-md-4 col-sm-4 pr-0">
         <div class="float-right pt-2">
           <i class="fa fa-cog float-right pr-4" (click)="showEditModal(editTemplate, order._id)"></i>
         </div>
         <div class="float-right pt-2">
           <i class="fa fa-cog float-right pr-0" (click)="showSliceModal(sliceTemplate, order._id)"></i>
         </div>
-      </div>
+      </div> -->
     </div>
     <div class="row">
       <span class="mt-2 span-padding">Usuario:</span>
