--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -27,7 +27,7 @@
 					<a dropdownToggle type="button" class="nav-link dropdown-toggle waves-light" mdbRippleRadius><img src="assets/img/perfil2.png" height="50px" width="auto">
 						<b>User</b><span class="caret"></span></a>
 				
-					<div *dropdownMenu class="dropdown-menu dropdown-primary dropdown" role="menu">
+					<div *dropdownMenu class="dropdown-menu dropdown-primary dropdown customUser" role="menu">
 						<a class="dropdown-item waves-light" href="#" mdbRippleRadius>Cuenta</a>
 						<a class="dropdown-item waves-light" (click)="logout()" mdbRippleRadius>Salir</a>
 					</div>
