--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -24,7 +24,7 @@
 </div>
 <div class="ml-5 mr-5 pl-5 pr-5 pt-1 pb-2 mt-2 text-center">
   <div class="row mb-2 customBox">
-    <form #form="ngForm" novalidate class="form-inline">
+    <form #form="ngForm" novalidate class="form-inline customForm">
       <h6 class="pt-2">Filtrar:</h6>
       <div class="md-form form-group mr-0 ml-0 col-md-10 col-lg-10">
         <input type="text" class="input-alternate" placeholder="Nombre" name="query" [(ngModel)]='listFilter'
