--- a/src/styles.scss
+++ b/src/styles.scss
@@ -503,7 +503,7 @@ border:solid 2px #e43012;
 
 @media (max-width: 992px) {
     nav ul li{
-        width:10%;
+        width:100%;
         background-color:#e43012;
     }
     nav ul{
@@ -512,6 +512,9 @@ border:solid 2px #e43012;
     }
     .customLiDate{
         display:none;
+    }
+    .customUser{
+    width:100%!important;
     }
 }
 
