--- a/src/styles.scss
+++ b/src/styles.scss
@@ -567,3 +567,10 @@ input::-webkit-inner-spin-button {
 input[type=number] {
   -moz-appearance: textfield;
 }
+
+.customNavBarItem{
+    padding-left: 0.75rem;
+    padding-top: .75rem;
+    padding-right: 0.75rem;
+    padding-bottom: .7rem;
+}
